--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Mack Be</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+    
+    
+   <a href="index.html" class="mr-auto"><img src="assets/logo/logo_ 3.png" alt="" class="img-fluid"></a>
       <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
 
       <nav id="navbar" class="navbar">
