--- a/index.html
+++ b/index.html
@@ -40,11 +40,8 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="container">
-
-    
-    
    <a href="index.html" class="mr-auto"><img src="assets/logo/logo_ 3.png" alt="" class="img-fluid"></a>
-      <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
+      <h2>A uniquely talented <span>graphic designer/artist</span> eager to aid you in your endeavor.</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
