--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&family=Major+Mono+Display&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +45,7 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="container">
-   <a href="index.html" class="mr-auto"><img src="assets/logo/logo_ 3.png" alt="" class="img-fluid"></a>
+   <a href="index.html" class="mr-auto"><img src="assets/visual/logo_3d_glow.png" alt="" class="img-fluid"></a>
       <h2>A uniquely talented <span>graphic designer/artist</span> eager to aid you in your endeavor.</h2>
 
       <nav id="navbar" class="navbar">
