--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&family=Major+Mono+Display&display=swap" rel="stylesheet">
@@ -45,7 +44,7 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="container">
-   <a href="index.html" class="mr-auto"><img src="assets/visual/logo_3d_glow.png" alt="" class="img-fluid"></a>
+   <a href="index.html" class="mr-auto"><img src="assets/visual/logo_2.png" alt="" class="img-fluid"></a>
       <h2>A uniquely talented <span>graphic designer/artist</span> eager to aid you in your endeavor.</h2>
 
       <nav id="navbar" class="navbar">
