--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&family=Major+Mono+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,8 +40,8 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="container">
-   <a href="index.html" class="mr-auto"><img src="assets/visual/logo_2.png" alt="" class="img-fluid"></a>
-      <h2>A uniquely talented <span>graphic designer/artist</span> eager to aid you in your endeavor.</h2>
+   <a href="index.html" class="mr-auto"><img src="assets/logo/logo_ 3.png" alt="" class="img-fluid"></a>
+      <h2>A uniquely talented <span>graphic designer/artist</span> eager to aid you in your endeavor. </h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -82,7 +78,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/visual/" class="img-fluid" alt="">
+          <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>UI/UX &amp; Graphic Designer</h3>
