--- a/index.html
+++ b/index.html
@@ -750,11 +750,8 @@
   </section><!-- End Contact Section -->
 
   <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by Mack B Design
+    <img src="navlogo.png" alt="Nav Logo" width="20" height="20">
+   by Mack B Design
   </div>
 
   <!-- Vendor JS Files -->
