--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="container">
-   <a href="index.html" class="mr-auto"><img src="assets/visual/logo_2.png" alt="" class="img-fluid"></a>
+   <a href="index.html" class="mr-auto"><img src="assets/logo/logo_2.png" alt="" class="img-fluid"></a>
       <h2>A uniquely talented <span>graphic designer/artist</span> eager to aid you in your endeavor.</h2>
 
       <nav id="navbar" class="navbar">
@@ -749,12 +749,13 @@
     </div>
   </section><!-- End Contact Section -->
 
-  <div class="credits">
-    <img src="navlogo.png" alt="Nav Logo" width="20" height="20">
+  <div>
+    <img src="assets/logo/navlogo.png"
+    class="img-fluid" alt="logo" style="width: 100px; height: 100px; margin-left: 50px; margin-top: 50px;">
    by Mack B Design
   </div>
+  
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
