--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-anchor-line" style="color: #b2904f;"></i>
+            <i class="ri-anchor-line" style="color: #FFF51C;"></i>
             <h3>Dirada Pack</h3>
           </div>
         </div>
@@ -293,7 +293,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
+            <i class="ri-fingerprint-line" style="color: #FFF51C;"></i>
             <h3>Flavor Nivelanda</h3>
           </div>
         </div>
