--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header id="header">
     <div class="container">
         <a href="index.html" class="mr-auto"><img src="assets/logo/logo_ 3.png" alt="" class="img-fluid"></a>
-      <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
+      <h2>Beyond <span>graphics; design </span> experiences</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
