--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header id="header">
     <div class="container">
         <a href="index.html" class="mr-auto"><img src="assets/logo/logo_ 3.png" alt="" class="img-fluid"></a>
-      <h2>Beyond graphics; design experiences</h2>
+      <h2>Beyond graphics;<span> design experiences.</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -88,15 +88,15 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://mckbdsgn.github.io/portfolio/</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+19023880933</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Vancouver, BC Canada</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>33</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>brian.macadam1@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
