--- a/index copy.html
+++ b/index copy.html
@@ -41,7 +41,7 @@
   <header id="header">
     <div class="container">
         <a href="index.html" class="mr-auto"><img src="assets/logo/logo_ 3.png" alt="" class="img-fluid"></a>
-      <h2>Beyond graphics; esign experiences.></h2>
+      <h2>Beyond graphics;<span> design experiences.</span></h2>
 
       <nav id="navbar" class="navbar">
         <li><a class="nav-link active" href="#header">Home</a></li>
@@ -342,25 +342,39 @@
 
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
-          <div class="row portfolio-container">
-        <div class="col-lg-4 col-md-6">
+          <ul id="portfolio-flters">
+            <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".filter-app">App</li>
+            <li data-filter=".filter-card">Card</li>
+            <li data-filter=".filter-web">Web</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row portfolio-container">
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/mbdbook_thm.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-                           <div class="portfolio-links">
-                <a href="assets/portfolio/for_github/Brandguidebook.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <h4>App 1</h4>
+              <p>App</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 ">
-          <div class="portfolio-wrap"> 
-            <img src="assets/img/brochure_thm.png" class="img-fluid" alt="">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-                            <div class="portfolio-links">
-                <a href="assets/portfolio/for_github/brochure.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <h4>Web 3</h4>
+              <p>Web</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
