--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
           </div>
         </div>
 
+<!-- One set of slid show beginning -->
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
             <img src="assets/img/masq_thm.png" class="img-fluid" alt="">
@@ -401,12 +402,14 @@
               <h4>POSTER 1</h4>
               <p>Poster</p>
               <div class="portfolio-links">
-                <a href="assets/portfolio/for_github/MASQ.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/portfolio/for_github/MASQ.pdf" target="_blank"><i class="bx bx-plus"></i></a>
+                
               </div>
             </div>
           </div>
         </div>
+
+<!-- End of the slid show -->
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
@@ -415,8 +418,8 @@
               <h4>BOOK 3</h4>
               <p>Book</p>
               <div class="portfolio-links">
-                <a href="assets/portfolio/for_github/modern_design.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/portfolio/for_github/modern_design.pdf" target="_blank"><i class="bx bx-plus"></i></a>
+               
               </div>
             </div>
           </div>
