--- a/index.html
+++ b/index.html
@@ -269,6 +269,20 @@
   <section id="resume" class="resume">
     <div class="container">
 
+      <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+        <div class="portfolio-wrap">
+          <img src="assets/logo/logo.png" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Graphic Resume</h4>
+            <p>Other</p>
+            <div class="portfolio-links">
+              <a href="assets/portfolio/for_github/graphic_resume.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
