--- a/index.html
+++ b/index.html
@@ -269,20 +269,7 @@
   <section id="resume" class="resume">
     <div class="container">
 
-      <div class="col-lg-4 col-md-6 portfolio-item filter-other">
-        <div class="portfolio-wrap">
-          <img src="assets/logo/logo.png" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>Graphic Resume</h4>
-            <p>Other</p>
-            <div class="portfolio-links">
-              <a href="assets/portfolio/for_github/graphic_resume.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
+  
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
@@ -290,58 +277,31 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title"><img src="assets/portfolio/for_github/graphic_resume.png" alt=""></h3>
           <div class="resume-item pb-0">
             <h4>Brian MacAdam aka. Mack B</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-            <p>
-            <ul>
-              <li>Vancouver, BC Canada</li>
+               <li>Vancouver, BC Canada</li>
               <li>9023880933</li>
               <li>brian.macadam1@gmail.com</li>
-            </ul>
-            </p>
-          </div>
+             </div>
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4></h4>
-            <h5></h5>
+            <h4>Vancouver Career College</h4>
+            <h5>Graphic Design Technology</h5>
             <p><em></em></p>
-            <p></p>
-          </div>
+                     </div>
           <div class="resume-item">
             <h4></h4>
             <h5></h5>
             <p><em></em></p>
-            <p></p>
-          </div>
+            </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4></h4>
-            <h5></h5>
-            <p><em> </em></p>
-            <p>
-            <ul>
-              <li></li>
-            </ul>
-            </p>
-          </div>
-          <div class="resume-item">
-            <h4></h4>
-            <h5></h5>
-            <p><em></em></p>
-            <p>
-            <ul>
-              <li></li>
-            </ul>
-            </p>
-          </div>
-        </div>
-      </div>
-
+            <h4>QUBE - by Dan Barro</h4>
+            <p>see portfolio section</p>
     </div>
   </section><!-- End Resume Section -->
 
