--- a/index.html
+++ b/index.html
@@ -434,6 +434,20 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
+            <div class="portfolio-wrap">
+              <img src="assets/thumbs/CARRT.png class="img-fluid" alt="Tri-fold Brochure">
+              <div class="portfolio-info">
+                <h4>JRPG Tech Demo</h4>
+                <p>Other</p>
+                <div class="portfolio-links">
+                  <a href="assets/portfolio/for_github/video-1652651992.mp4" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
        
       </div>
     </section><!-- End Portfolio Section -->
