--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
             <div class="portfolio-wrap">
-              <img src="assets/thumbs/CARRT.png class="img-fluid" alt=>
+              <img src="assets/thumbs/CARRT.png" class="img-fluid" alt="RPG">
               <div class="portfolio-info">
                 <h4>JRPG Tech Demo</h4>
                 <p>Other</p>
