--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                 <p>Other</p>
                 <div class="portfolio-links">
                   <a href="assets/portfolio/for_github/video-1652651992.mp4" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox" title="A Battle scene from a JRPG Video Game created by MACK B Design co."><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
