--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link link rel="stylesheet" href="https://use.typekit.net/ymr7axx.css">
+ <link rel="stylesheet" href="https://use.typekit.net/ymr7axx.css">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -132,6 +132,7 @@
     <div class="counts container">
 
       <div class="row">
+        
 
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
