--- a/index.html
+++ b/index.html
@@ -320,12 +320,15 @@
               <li>brian.macadam1@gmail.com</li>
             </ul>
           </div>
-          <h3 class="resume-title">Education</h3>
+          <h3 class="resume-title">Objective</h3>
           <div class="resume-item">
-            <h4>Vancouver Career College</h4>
-            <h5>Graphic Design Technology</h5>
-            <p><em></em></p>
-          </div>
+             <h5>
+               Highly creative and motivated Graphic Design Technology graduate with a strong 
+              background in aquaculture, a passion for visual arts, and game development. Seeking
+              opportunities to leverage my diverse skill set in graphic design, animation, and game
+              development to contribute to a dynamic team.
+              </h5>
+        </div>
           <div class="resume-item">
             <h4></h4>
             <h5></h5>
@@ -333,15 +336,84 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
+          <h5 class="resume-title">Education </h5>
           <div class="resume-item">
-            <h4>QUBE - by Dan Barro</h4>
-            <p>see portfolio section</p>
+            <h4>VACC - Graphic Design Technology</h4>
+            <p>October 2023</p>
           </div>
         </div>
       </div>
     </div>
-    </section>
+
+    <div class="resume-item">
+      <h4></h4>
+      <h5></h5>
+      <p><em></em></p>
+    </div>
+  </div>
+  <div class="col-lg-6">
+    <h3 class="resume-title">Work Experience</h3>
+    <div class="resume-item">
+   <h4> Atlantic Aqua Farms, Oyster Bed Prince Edward Island</h4>
+   <h5> Aquaculture Crewman, [2015-2022]</h5>
+  <p> - Worked on an oyster farm, primarily on a skiff, engaging in physically demanding outdoor labor.
+    - Collaborated with a team to manage daily tasks and responsibilities related to aquaculture production.</p>
+    </div>
+
+    <h4> Piatto Pizzeria</h4>
+    <h5> Cook/Kitchen Manager</h5>
+    <p> - Food Preparation: Prepare and cook pizzas, ensuring consistency and quality.
+     <li>Kitchen Management: Oversee kitchen organization, staff supervision, and inventory control.</li>
+     <li>Assurance: Ensure food safety, maintain equipment, and monitor food quality.</li>
+     <li>Order Management: Coordinate with front-of-house staff and prioritize orders.</li>
+     <li>Cost Control: Manage food costs, minimize waste, and optimize profitability.</li>
+     <li>Customer Service: Address inquiries, maintain a positive customer experience.</li></p>
+     </div>
+  </div>
+</div>
+</div>
+
+<div class="resume-item">
+  <h4></h4>
+  <h5></h5>
+  <p><em></em></p>
+</div>
+</div>
+<div class="col-lg-6">
+<h3 class="resume-title">Art & Design </h3>
+<div class="resume-item">
+  <p><li>- A lifelong visual artist and songwriter with a strong passion for creating album art and songwriting.</li>
+    <li>- Dabbled in animation, creating cartoons.</li>
+    <li>- Self-study and practice in video game development using RPG Maker in Junior High.</li>
+    <li>- Currently studying C++ to develop games with Unreal Engine 5.</li>
+    <li>- Designed a personal website and logo for self-promotion.</li>
+    </p>
+</div>
+</div>
+</div>
+</div>
+
+div class="resume-item">
+  <h4></h4>
+  <h5></h5>
+  <p><em></em></p>
+</div>
+</div>
+<div class="col-lg-6">
+<h3 class="resume-title">Skills </h3>
+<div class="resume-item">
+  <p><li>-Graphic Design</li>
+    <li>- Animation</li>
+    <li>- Video Game Development (RPG Maker, Unreal Engine 5, C++, JavaScript)</li>
+    <li>- Creative Problem-Solving</li>
+    <li>- Designed a personal website and logo for self-promotion.</li>
+    </p>
+</div>
+</div>
+</div>
+</div>
+
+
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container">
