--- a/index.html
+++ b/index.html
@@ -195,18 +195,16 @@
           </div>
 
           <div class="progress">
-            <span class="skill">JavaScript/python<i class="val">55%</i></span>
+            <span class="skill">JavaScript/C++<i class="val">55%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
         </div>
-        <!-- End Skills -->
-
         <!-- ======= Testimonials ======= -->
         <div class="testimonials container">
-
+ 
           <div class="section-title">
             <h2>Kind Words from cool people</h2>
           </div>
@@ -298,9 +296,8 @@
 
           </div>
 
-        </div><!-- End Testimonials  -->
-
-  </section><!-- End About Section -->
+        </div>
+  </section>
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
