--- a/index.html
+++ b/index.html
@@ -309,7 +309,6 @@
       <div class="row">
         <div class="col-lg-6">
           <h3 class="resume-title"> <span>Brian MacAdam</span></h3>
-          <!-- Replace 'your_resized_resume.png' with the actual filename of your resized image -->
             <h4> aka. Mack B</h4>
             <ul>
               <li>Vancouver, BC Canada</li>
@@ -319,14 +318,14 @@
           </div>
           <h3 class="resume-title">Objective</h3>
           <div class="resume-item">
-             <h5>
-               Highly creative and motivated Graphic Design Technology graduate with a strong 
+           
+            <h5><p>Highly creative and motivated Graphic Design Technology graduate with a strong 
               background in aquaculture, a passion for visual arts, and game development. Seeking
               opportunities to leverage my diverse skill set in graphic design, animation, and game
-              development to contribute to a dynamic team.
-              </h5>
-        </div>
-          <div class="resume-item">
+              development to contribute to a dynamic team.</p></h5>
+                    </div>
+          
+                    <div class="resume-item">
             <h4></h4>
             <h5></h5>
             <p><em></em></p>
@@ -353,13 +352,14 @@
     <div class="resume-item">
    <h4> Atlantic Aqua Farms, Oyster Bed Prince Edward Island</h4>
    <h5> Aquaculture Crewman, [2015-2022]</h5>
-  <p> - Worked on an oyster farm, primarily on a skiff, engaging in physically demanding outdoor labor.
-    - Collaborated with a team to manage daily tasks and responsibilities related to aquaculture production.</p>
+  <p><li>Worked on an oyster farm, primarily on a skiff, engaging in physically demanding outdoor labor.</li>
+    <li>Collaborated with a team to manage daily tasks and responsibilities related to aquaculture production.</li></p>
     </div>
 
-    <h4> Piatto Pizzeria</h4>
-    <h5> Cook/Kitchen Manager</h5>
-    <p> - Food Preparation: Prepare and cook pizzas, ensuring consistency and quality.
+    <div class="resume-item">
+    <h3> Piatto Pizzeria</h3>
+    <h4> Cook/Kitchen Manager</h4>
+    <p> -Food Preparation: Prepare and cook pizzas, ensuring consistency and quality.
      <li>Kitchen Management: Oversee kitchen organization, staff supervision, and inventory control.</li>
      <li>Assurance: Ensure food safety, maintain equipment, and monitor food quality.</li>
      <li>Order Management: Coordinate with front-of-house staff and prioritize orders.</li>
@@ -390,7 +390,7 @@
 </div>
 </div>
 
-div class="resume-item">
+<div class="resume-item">
   <h4></h4>
   <h5></h5>
   <p><em></em></p>
