--- a/index.html
+++ b/index.html
@@ -312,20 +312,7 @@
               </p>
               <img src="assets/img/realperson.jpg" class="testimonial-img" alt="">
               <h3>Brenda Bwendlellyn</h3>
-              <h4>Real Person</h4>
-            </div>
-          </div>
-
-          <div class="swiper-slide">
-            <div class="testimonial-item">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                You'll always be my first choice!
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="assets/img/dumbass.jpg" class="testimonial-img" alt="">
-              <h3>Chef Michael MacLean</h3>
-              <!-- Add more information if needed -->
+              <h4>Real Person
             </div>
           </div>
         </div>
@@ -333,10 +320,13 @@
     </div>
   </div>
 </section>
-<section id="resume" class="resume">
+
+          <!-- Portfolio  -->
+
+<section id="portfolio" class="portfolio-info">
         <div class="row portfolio-container">
-          <!-- Portfolio Item 1 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Poster">
+          <div class="portfolio" class="lightbox">
+                  <div class="col-lg-4 col-md-6 portfolio-item filter-Poster">
             <div class="portfolio-wrap">
               <img src="assets/thumbs/masq.png" class="img-fluid" alt="Event Poster">
               <div class="portfolio-info">
