--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        }
  
        #background-video {
-          position: fixed;
+          position: absolute;
           top: 0;
           left: 0;
           width: 100%;
