--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <style>
        body {
           margin: 0;
-          overflow: hidden; /* Prevent scrollbars from appearing */
+          overflow: auto; /* Prevent scrollbars from appearing */
        }
  
        #background-video {
