--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           left: 0;
           width: 100%;
           height: 100%;
-          background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+          background: rgba(0, 0, 0, 0.0); /* Semi-transparent black overlay */
        }
  
        /* Additional styles for your content go here */
@@ -70,6 +70,8 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" />
+
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
@@ -82,6 +84,7 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="container">
+      <h2<style=“padding-left:200px;”>
       <a href="index.html" class="mr-auto"><img src="assets/logo/logo_ 3.png" alt="" class="img-fluid"></a>
       <h2>Beyond <span>graphics; design</span> experiences. </h2>
 
