--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
   <header id="header">
     <div class="container">
       <a href="index.html" class="mr-auto"><img src="assets/logo/logo_ 3.png" alt="" class="img-fluid"></a>
-      <h2>Beyond <span>graphics; design</span> experiences. </h2>
+      <h2>Digital Artist<span>Graphic Designer</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link active" href="#header">Home</a></li>
+          <li><a class="4nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
