--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 
 
+
+
+try {
+  const json = JSON.parse(data);
+} catch (err) {
   console.error('Error parsing JSON:', err);
 }
 
-  console.error('Error parsing JSON:', err);
 
   console.error('Error parsing JSON:', err);
 
