--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       overflow: auto; /* Prevent scrollbars from appearing */
     }
 
-    <style>
+    style>
     /* Add this style for the contact form lightbox */
     .lightbox {
       display: none;
