--- a/index.html
+++ b/index.html
@@ -58,44 +58,7 @@
       right: 10px;
       cursor: pointer;
     }
-  </style>
-</head>
-
-<body>
-      
-  #background-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Cover the entire viewport */
-    z-index: -1;
-  }
-
-  .content-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
-  }
-</style>
-
-<!-- Background Image (GIF) -->
-<img src="assets/img/bck.gif" id="background-image" alt="Background Image">
-
-<!-- Overlay -->
-<div class="content-overlay"></div>
-  <!-- Content Overlay -->
-  <div class="content-overlay">
-    <!-- Your website content goes here -->
-  </div>
- 
- </body>
-
-  <!-- Vendor CSS Files -->
+  </style></head>
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
